<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <!--  Header  Starts-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">
            <!-- Logo Start-->
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:contentDescription="@string/image_description"
                android:src="@drawable/mat" />
            <!-- Logo Ends -->
        </LinearLayout>
        <!--  Header Ends -->
        <!-- Footer Start -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background"
            android:orientation="vertical" />
        <!-- Footer Ends -->

        <!-- Registration Form -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header"
            android:orientation="vertical"
            android:padding="10dip">
            <!-- Full Name Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_lbl"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/route_name_TXT"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:inputType="numberDecimal|text"
                android:hint="@string/route_lbl_hint"
                android:singleLine="true" />
            <!--  Email Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/stage_lbl"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <AutoCompleteTextView
                android:id="@+id/stage_TXT"
                android:enabled="false"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:inputType="number|textCapCharacters|textAutoComplete"
                android:layout_marginTop="5dip"
                android:hint="@string/stage_lbl_hint"
                android:completionThreshold="1" />
            <!-- Password Label -->
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_lbl"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/depart_spinner"
                android:entries="@array/time_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/remind_me_lbl"
                android:textColor="#372c24"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/reminder_spinner"
                android:entries="@array/reminder_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="20dp"
                android:singleLine="true" />
            <!-- Register Button -->
            <Button
                android:id="@+id/btnRegisterFRM"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/button_style"
                android:text="@string/subimt_trip"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:onClick="HandleClickEvents"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>